--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,2 @@
-*.mp4 filter=lfs diff=lfs merge=lfs -text
-*.png filter=lfs diff=lfs merge=lfs -text
-public/audio/*.mp4 filter=lfs diff=lfs merge=lfs -text
-*.mp4 !text !filter !merge !diff
-*.png !text !filter !merge !diff
+# Auto detect text files and perform LF normalization
+* text=auto
